--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "type": "module",
   "name": "movie-network-node-server",
   "version": "1.0.0",
   "description": "Node server backend for cs5610 final project. Movie network project.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,14 @@
   "bugs": {
     "url": "https://github.com/dylanmarin/movie-network-node-server/issues"
   },
-  "homepage": "https://github.com/dylanmarin/movie-network-node-server#readme"
+  "homepage": "https://github.com/dylanmarin/movie-network-node-server#readme",
+  "dependencies": {
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.2",
+    "node-session": "^1.2.1",
+    "nodemon": "^3.0.1"
+  }
 }
